--- a/Views/FavoritesPage.xaml
+++ b/Views/FavoritesPage.xaml
@@ -1,11 +1,24 @@
 ﻿<Page x:Class="KinopoiskWpfApp.Views.FavoritesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="FavoritesPage">
+      Title="Избранное">
 
-    <StackPanel Margin="10">
-        <TextBlock Text="Избранное" FontSize="24" Margin="0,0,0,10"/>
-        <ListBox x:Name="FavoritesListBox" />
-        <Button Content="Назад" Margin="0,10,0,0" Click="GoBack_Click"/>
-    </StackPanel>
+    <Grid Margin="20">
+        <StackPanel>
+            <TextBlock Text="Избранные фильмы" FontSize="16" FontWeight="Bold" Margin="0,0,0,10"/>
+            <ListBox ItemsSource="{Binding FavoriteFilms}" Height="400">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                            <TextBlock Text="{Binding NameRu}" FontWeight="Bold" Width="300"/>
+                            <TextBlock Text="{Binding Year}" Margin="10,0,0,0" Width="50"/>
+                            <Button Content="Удалить"
+                                    Command="{Binding DataContext.RemoveFromFavoritesCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                    CommandParameter="{Binding}" Margin="10,0,0,0"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </StackPanel>
+    </Grid>
 </Page>
