--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -7,7 +7,7 @@
     <Grid>
         <StackPanel Margin="20">
 
-            <Button Content="Загрузить фильмы" Command="{Binding LoadFilmsCommand}" Width="150" Height="35" Margin="0,0,0,10"/>
+           
 
             <TextBlock Text="{Binding ErrorMessage}" Foreground="Red" Margin="0,0,0,10"/>
 
@@ -19,6 +19,7 @@
                         <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                             <TextBlock Text="{Binding NameRu}" FontWeight="Bold" Width="300"/>
                             <TextBlock Text="{Binding Year}" Margin="10,0,0,0"/>
+                            <Button Content="♥" Command="{Binding DataContext.AddToFavoritesCommand, RelativeSource={RelativeSource AncestorType=Page}}" CommandParameter="{Binding}" Margin="10,0,0,0" Width="30" Height="25"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
