--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -7,23 +7,31 @@
     <Grid>
         <StackPanel Margin="20">
 
-           
+            <!-- Фильтры -->
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,10" HorizontalAlignment="Left" >
+
+                <ComboBox Width="150" ItemsSource="{Binding Genres}" SelectedItem="{Binding SelectedGenre}" DisplayMemberPath="Name" Margin="0,0,10,0"/>
+
+                <ComboBox Width="150" ItemsSource="{Binding Countries}" SelectedItem="{Binding SelectedCountry}" DisplayMemberPath="Name" />
+
+            </StackPanel>
 
             <TextBlock Text="{Binding ErrorMessage}" Foreground="Red" Margin="0,0,0,10"/>
 
             <TextBlock Text="Загрузка..." Visibility="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}" FontStyle="Italic" Margin="0,0,0,10"/>
 
-            <ListBox ItemsSource="{Binding Films}" Height="400" >
+            <ListBox ItemsSource="{Binding Films}" Height="400">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                             <TextBlock Text="{Binding NameRu}" FontWeight="Bold" Width="300"/>
-                            <TextBlock Text="{Binding Year}" Margin="10,0,0,0"/>
+                            <TextBlock Text="{Binding Year}" Margin="10,0,0,0" Width="50"/>
                             <Button Content="♥" Command="{Binding DataContext.AddToFavoritesCommand, RelativeSource={RelativeSource AncestorType=Page}}" CommandParameter="{Binding}" Margin="10,0,0,0" Width="30" Height="25"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
+
         </StackPanel>
     </Grid>
 </Page>
