--- a/Views/FilmDetailsPage.xaml
+++ b/Views/FilmDetailsPage.xaml
@@ -1,14 +1,28 @@
 ﻿<Page x:Class="KinopoiskWpfApp.Views.FilmDetailsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:KinopoiskWpfApp.Views"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="FilmDetailsPage">
+      Title="Детали фильма">
 
-    <Grid>
-        
-    </Grid>
+    <ScrollViewer Margin="20" VerticalScrollBarVisibility="Auto">
+        <StackPanel>
+            <TextBlock Text="{Binding NameRu}" FontSize="24" FontWeight="Bold" Margin="0,0,0,10" />
+
+            <Image Source="{Binding PosterUrlPreview}" Height="400" Stretch="Uniform" Margin="0,0,0,20" />
+
+            <TextBlock Text="Год выпуска:" FontWeight="Bold"/>
+            <TextBlock Text="{Binding Year}" Margin="0,0,0,10"/>
+
+            <TextBlock Text="Жанры:" FontWeight="Bold"/>
+            <TextBlock Text="{Binding GenresString}" Margin="0,0,0,10"/>
+
+            <TextBlock Text="Страны:" FontWeight="Bold"/>
+            <TextBlock Text="{Binding CountriesString}" Margin="0,0,0,20"/>
+
+            <!-- Здесь можно добавить другие подробности, например описание, режиссёра и т.д., если есть -->
+
+            <Button Content="Добавить в избранное"
+                    Command="{Binding AddToFavoritesCommand}"
+                    Margin="0,10,0,0" Width="200" />
+        </StackPanel>
+    </ScrollViewer>
 </Page>
