--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,19 +1,20 @@
 ﻿<Window x:Class="KinopoiskWpfApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:KinopoiskWpfApp"
-        mc:Ignorable="d"
-        Title="Kinopoisk WPF" Height="600" Width="800">
+        Title="КиноПоиск" Height="600" Width="800">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <!-- для кнопок -->
+            <RowDefinition Height="*"/>
+            <!-- для фрейма -->
+        </Grid.RowDefinitions>
 
-    <DockPanel>
-        <Border Background="#FFEEEEEE" Padding="10" DockPanel.Dock="Top">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                <Button Content="Главная" Click="HomeButton_Click" Margin="0,0,10,0" Width="100"/>
-                <Button Content="Избранное" Click="FavoritesButton_Click" Width="100"/>
-            </StackPanel>
-        </Border>
-        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
-    </DockPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10" Grid.Row="0" >
+            <Button Content="Главная" Click="HomeButton_Click" Margin="5"/>
+            <Button Content="Избранное" Click="FavoritesButton_Click" Margin="5"/>
+        </StackPanel>
+
+        <Frame x:Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden"/>
+    </Grid>
 </Window>
