--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -4,7 +4,7 @@
       Title="Главная">
 
     <Page.Resources>
-        <!-- Стиль для ComboBox (фильтров) -->
+        <!-- Стиль для ComboBox со скрытым скроллбаром -->
         <Style TargetType="ComboBox" x:Key="FilterComboBoxStyle">
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="Background" Value="#333333"/>
@@ -21,43 +21,45 @@
                     <ControlTemplate TargetType="ComboBox">
                         <Grid>
                             <ToggleButton x:Name="ToggleButton"
-                                          Background="{TemplateBinding Background}"
-                                          BorderBrush="{TemplateBinding BorderBrush}"
-                                          BorderThickness="{TemplateBinding BorderThickness}"
-                                          Focusable="False"
-                                          IsChecked="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}}"
-                                          ClickMode="Press">
+                                        Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        Focusable="False"
+                                        IsChecked="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}}"
+                                        ClickMode="Press">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition />
                                         <ColumnDefinition Width="20"/>
                                     </Grid.ColumnDefinitions>
                                     <ContentPresenter Grid.Column="0"
-                                                      Margin="5,2,0,2"
-                                                      VerticalAlignment="Center"
-                                                      HorizontalAlignment="Left"
-                                                      Content="{TemplateBinding SelectionBoxItem}"
-                                                      ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
-                                                      ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
-                                                      RecognizesAccessKey="True"/>
+                                                    Margin="5,2,0,2"
+                                                    VerticalAlignment="Center"
+                                                    HorizontalAlignment="Left"
+                                                    Content="{TemplateBinding SelectionBoxItem}"
+                                                    ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
+                                                    ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                                    RecognizesAccessKey="True"/>
                                     <Path Grid.Column="1" Margin="0,0,5,0"
-                                          VerticalAlignment="Center"
-                                          Fill="White"
-                                          Data="M 0 0 L 4 4 L 8 0 Z"/>
+                                        VerticalAlignment="Center"
+                                        Fill="White"
+                                        Data="M 0 0 L 4 4 L 8 0 Z"/>
                                 </Grid>
                             </ToggleButton>
                             <Popup x:Name="Popup"
-                                   Placement="Bottom"
-                                   IsOpen="{TemplateBinding IsDropDownOpen}"
-                                   AllowsTransparency="True"
-                                   Focusable="False"
-                                   PopupAnimation="Fade">
+                                Placement="Bottom"
+                                IsOpen="{TemplateBinding IsDropDownOpen}"
+                                AllowsTransparency="True"
+                                Focusable="False"
+                                PopupAnimation="Fade">
                                 <Border Background="#333333"
-                                        BorderBrush="#666666"
-                                        BorderThickness="1"
-                                        MaxHeight="200"
-                                        MinWidth="{TemplateBinding ActualWidth}">
-                                    <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
+                                    BorderBrush="#666666"
+                                    BorderThickness="1"
+                                    MaxHeight="200"
+                                    MinWidth="{TemplateBinding ActualWidth}">
+                                    <!-- ScrollViewer со скрытым скроллбаром -->
+                                    <ScrollViewer VerticalScrollBarVisibility="Hidden"
+                                                HorizontalScrollBarVisibility="Disabled">
                                         <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
                                     </ScrollViewer>
                                 </Border>
@@ -85,21 +87,21 @@
         </LinearGradientBrush>
     </Page.Background>
 
-    <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled">
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
         <StackPanel Margin="20">
             <TextBlock Text="Популярные фильмы" FontSize="24" FontWeight="Bold" Foreground="White" Margin="0,0,0,10"/>
 
             <!-- Фильтры -->
             <StackPanel Orientation="Horizontal" Margin="0,0,0,20">
                 <ComboBox Style="{StaticResource FilterComboBoxStyle}"
-                          ItemsSource="{Binding Genres}"
-                          DisplayMemberPath="Name"
-                          SelectedItem="{Binding SelectedGenre}"/>
+                        ItemsSource="{Binding Genres}"
+                        DisplayMemberPath="Name"
+                        SelectedItem="{Binding SelectedGenre}"/>
                 <ComboBox Style="{StaticResource FilterComboBoxStyle}"
-                          ItemsSource="{Binding Countries}"
-                          DisplayMemberPath="Name"
-                          SelectedItem="{Binding SelectedCountry}"
-                          Margin="10,0,0,0"/>
+                        ItemsSource="{Binding Countries}"
+                        DisplayMemberPath="Name"
+                        SelectedItem="{Binding SelectedCountry}"
+                        Margin="10,0,0,0"/>
             </StackPanel>
 
             <!-- Фильмы -->
@@ -113,7 +115,7 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="8" Margin="10" Width="360"
-                                Background="#2a2a2a" Padding="5" >
+                                Background="#2a2a2a" Padding="5">
                             <Border.RenderTransform>
                                 <ScaleTransform x:Name="scale" ScaleX="1" ScaleY="1"/>
                             </Border.RenderTransform>
@@ -147,20 +149,20 @@
                                     <Button Command="{Binding DataContext.NavigateToFilmDetailsCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                             CommandParameter="{Binding}"
                                             Background="Transparent" BorderBrush="Transparent">
-                                        <Image Source="{Binding PosterUrlPreview}" Stretch="UniformToFill" Width="350" Height="520" />
+                                        <Image Source="{Binding PosterUrlPreview}" Stretch="UniformToFill" Width="350" Height="520"/>
                                     </Button>
 
-                                    <!-- Кнопка "Добавить в избранное" поверх постера -->
+                                    <!-- Кнопка "Добавить в избранное" -->
                                     <Button Content="★"
                                             Command="{Binding DataContext.AddToFavoritesCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                             CommandParameter="{Binding}"
                                             Background="#66000000" BorderBrush="Transparent"
                                             FontSize="20" Foreground="Yellow"
-                                            HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5" Width="40" Height="40">
+                                            HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5" Width="40" Height="40"
+                                            Cursor="Hand">
                                         <Button.Style>
                                             <Style TargetType="Button">
                                                 <Setter Property="Visibility" Value="Visible"/>
-                                                <Setter Property="Cursor" Value="Hand"/>
                                                 <Style.Triggers>
                                                     <DataTrigger Binding="{Binding IsFavorite}" Value="True">
                                                         <Setter Property="Visibility" Value="Collapsed"/>
@@ -171,7 +173,7 @@
                                     </Button>
                                 </Grid>
 
-                                <!-- Название -->
+                                <!-- Название и год -->
                                 <TextBlock Text="{Binding NameRu}" FontWeight="Bold" Foreground="White" TextAlignment="Center" TextWrapping="Wrap" Margin="0,5,0,0"/>
                                 <TextBlock Text="{Binding Year}" FontStyle="Italic" Foreground="Gray" TextAlignment="Center"/>
                             </StackPanel>
